--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,32 @@
 // ./src/styles/styles.scss
-// Styling for the Toolbar and Checkbox
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.button {
+  width: max-content;
+}
+.App {
+  font-family: sans-serif;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 100px 16px;
+  background-color: var(--gray-200);
+  min-height: 100vh;
+  height: 100%;
+}
+#canvas {
+  border: 1px solid var(--border-neutral-subtle);
+  z-index: 2;
+}
+.lower-canvas {
+  position: initial !important;
+}
+
 .Toolbar {
   display: flex;
   flex-direction: column;
