--- a/src/pages/canvas/name.module.scss
+++ b/src/pages/canvas/name.module.scss
@@ -1,6 +1,6 @@
 // src/pages/canvas/name.module.scss
 .page {
-  background-color: black;
+  background-color: #333333;
   min-height: 100vh; /* Ensure the background covers the entire viewport */
   color: white; /* Optional: Ensure text is visible on a dark background */
   display: flex;
